# waro-cli

./: .env.example  .gitignore  Cargo.toml  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: client.rs  compare.rs  config.rs  contract.rs  lib.rs  main.rs  output.rs  pagination.rs  spinner.rs  validate.rs
src/commands/: analytics.rs  customers.rs  financial.rs  menu.rs  mod.rs  queries.rs  sales.rs  schema.rs  waros.rs
tests/: cli.rs
